# chip8emu-esp32

./: .gitignore  ARCHITECTURE.md  BUILD_COMPARISON.md  CMakeLists.txt  LILYGO_SETUP.md  PORTING_GUIDE.md  QUICK_START.md  README.md  platformio.ini
config/: keymap.cfg
docs/: SYS_INSTRUCTION.md
include/core/: Chip8.h  Config.h
include/interfaces/: IAudio.h  IDisplay.h  IInput.h  IPlatform.h
include/lilygo/: LilyGoAudio.h  LilyGoDisplay.h  LilyGoInput.h  LilyGoPlatform.h
include/sdl/: SDLAudio.h  SDLDisplay.h  SDLInput.h  SDLPlatform.h
roms/: IBM_Logo.asm  pong.asm  test_opcode.asm  test_opcode.ch8  test_opcode_full.asm
src/: main.cpp
src/core/: Chip8.cpp  Config.cpp
src/lilygo/: LilyGoAudio.cpp  LilyGoDisplay.cpp  LilyGoInput.cpp  LilyGoPlatform.cpp
src/sdl/: SDLAudio.cpp  SDLDisplay.cpp  SDLInput.cpp  SDLPlatform.cpp
tools/: README.md  disassembler.py  list_roms.py  rom_to_array.py
